update arch repo
